v5: update email in the footer

--- a/index.html
+++ b/index.html
@@ -1418,12 +1418,12 @@
 													<div class="elementor-widget-container">
 														<div class="elementor-text-editor elementor-clearfix">
 															<h2>Fresh Clothing</h2>
-															<p>Email:<i> info@freshclothingindia.com </i></p>
-															<p>For Orders write to us at <br><i
-																	style="font-size: 1rem;">orders@freshclothingindia.com</i>
+															<p>Email:<i> rajeev@fresh-clothing.com </i></p>
+															<p>For Orders and Support write to us at <br><i
+																	style="font-size: 1rem;">rajeev@fresh-clothing.com</i>
 															</p>
-															<p>For Support write to us at<i>
-																	<br>support@freshclothingindia.com</i></p>
+															<!-- <p>For Support write to us at<i>
+																	<br>support@freshclothingindia.com</i></p> -->
 															<p>6A, 2nd street, Subba-Rao Avenue, Nungambakkam, <span
 																	style="font-size: 1rem;"><br>Chennai &#8211; 600006,
 																	India.</span></p>
