--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="profile" href="https://gmpg.org/xfn/11">
 	<title>Fresh clothing - India's leading clothing buying house.</title>
-
+	<script src="https://use.fontawesome.com/84a211ff40.js"></script>
 	<!-- This site is optimized with the Yoast SEO plugin v12.6.2 - https://yoast.com/wordpress/plugins/seo/ -->
 	<meta name="description"
 		content="Fresh clothing India is a clothing buying house. It is your Indian interface in manufacturing and developing all your clothing needs.">
